--- a/src/Components/Submission/Submission.css
+++ b/src/Components/Submission/Submission.css
@@ -34,7 +34,7 @@
   display: block;
 }
 
-update-popup {
+.update-popup {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -49,3 +49,47 @@ update-popup {
   opacity: 1;
   display: block;
 }
+
+
+.submission-container label {
+  margin-top: 5px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.submission-container input,
+.submission-container textarea {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+.submission-container textarea {
+  min-height: 80px;
+}
+
+.submission-container button {
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.submission-container button[type="submit"] {
+  font-weight: bold;
+  background-color: #4CAF50;
+  color: white;
+}
+
+.submission-container button[type="button"] {
+  font-weight: bold;
+  background-color: #ff0000;
+  color: #fcfcfc;
+}
+
