--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,3 +1,24 @@
 .about-container {
+    text-align: center;
+    padding: 5px;
     border: 2px solid black;
-  }
+    border-radius: 10px;
+    display: inline-block;
+    max-width: 80%;
+    background-color: hsla(132, 27%, 63%, 1);
+}
+
+.about-container p {
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 1.6;
+    white-space: pre-line;
+
+}
+
+.journal-title {
+    font-size: 30px;
+    text-align: center;
+    padding: 20px;
+
+}
