--- a/src/Components/People/People.css
+++ b/src/Components/People/People.css
@@ -50,3 +50,14 @@
   opacity: 1;
   display: block;
 }
+
+
+.add-person-heading {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin: 20px 0 10px 0;
+  text-align: left;
+  width: 100%;
+  display: block;
+}
