--- a/src/Components/Text/Text.css
+++ b/src/Components/Text/Text.css
@@ -66,6 +66,13 @@
 }
 
 
+.text-container label {
+  margin-top: 5px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  display: block;
+}
+
 
 .text-container input,
 .text-container textarea {
@@ -104,3 +111,15 @@
   cursor: pointer;
   margin-right: 10px;
 }
+
+
+.add-text-heading {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin: 20px 0 10px 0;
+  text-align: left;
+  width: 100%;
+  display: block;
+}
+
