--- a/src/Components/Text/Text.css
+++ b/src/Components/Text/Text.css
@@ -90,7 +90,7 @@
 
 .text-container button[type="submit"] {
   font-weight: bold;
-  background-color: #4CAF50;
+  background-color: hsla(132, 27%, 63%, 1);
   color: white;
   padding: 10px 15px;
   font-size: 18px;
@@ -102,7 +102,7 @@
 
 .text-container button[type="button"] {
   font-weight: bold;
-  background-color: #ff0000;
+  background-color: rgb(204, 61, 70);
   color: #fcfcfc;
   padding: 10px 15px;
   font-size: 18px;
@@ -123,3 +123,12 @@
   display: block;
 }
 
+.delete-button {
+  border: 2px solid rgb(204, 61, 70);
+  color: rgb(204, 61, 70);
+  background: hsla(45, 29%, 97%, 1);
+}
+.delete-button:hover {
+  background: rgb(204, 61, 70);
+  color: hsla(45, 29%, 97%, 1);
+}
