--- a/src/Components/People/People.css
+++ b/src/Components/People/People.css
@@ -1,14 +1,34 @@
  .person-container {
-    border: 5px solid black;
     display:flex;
     flex-direction: column;
+
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 2rem;
+    background-color: #fefefe;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    line-height: 1.6;
+    color: #333;
+    font-size: 20px;
   }
   .roles-container {
     border: 3px solid #A3C19A;
     display:flex;
-    flex-direction: row;
-    padding: 40px 10px;
+    flex-direction: column;
+    padding: 30px 0px;
     border-radius: 5px;
+    gap: 0px;
+
+  }
+  .role {
+    display:flex;
+    gap: 10px;
+    font-size: 0.5rem;
+    padding: 0px 20px;
+    flex-direction: row;
+
   }
 
 
@@ -80,4 +100,9 @@
 .delete-button:hover {
   background: rgb(204, 61, 70);
   color: hsla(45, 29%, 97%, 1);
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 10px;
 }
