minor changes to fix tos text

--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -11,7 +11,7 @@ header button {
   margin-left: 0;
 }
 
-.subguide-container {
+.tos-container {
   max-width: 800px;
   margin: 2rem auto;
   padding: 2rem;
